# robops-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SPEC.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-emulator.yml  deploy-frontend.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: ota.py  robots.py  schedules.py  telemetry.py
backend/app/models/: ota.py  robot.py  schedule.py  telemetry.py
backend/app/services/: dynamodb_service.py  iot_service.py  scheduler_service.py  telemetry_service.py  timestream_service.py
backend/app/websocket/: handler.py
backend/lambda_handlers/: scheduler_trigger.py  telemetry_processor.py  websocket_broadcaster.py
backend/tests/: conftest.py  test_api.py  test_lambda_handlers.py  test_ota.py  test_placeholder.py  test_schedules.py
docs/: architecture.py  technical-overview.md
emulator/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
emulator/robot/: config.py  main.py  mqtt_client.py  robot_state.py
emulator/scripts/: download_certs.sh
emulator/tests/: test_robot_state.py
frontend/: biome.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useRobots.ts  useTelemetry.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  OTA.tsx  RobotDetail.tsx  Schedules.tsx
frontend/src/test/: components.test.tsx  placeholder.test.tsx
frontend/src/types/: robot.ts
infrastructure/: README.md
infrastructure/environments/dev/: backend.tf  main.tf  outputs.tf  variables.tf  (+1 more)
(+41 files in other folders)
